restore -webkit prefix

--- a/image-as-text/index.html
+++ b/image-as-text/index.html
@@ -12,6 +12,7 @@
     font-size: 4em;
     background: url(background.png) center;
     background-size: cover;
+    -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
     margin: 0 auto;
